fixed bug for the footer to now wrap contact links

--- a/src/packages/modules/global-header-footer/css/_responsive-footer.scss
+++ b/src/packages/modules/global-header-footer/css/_responsive-footer.scss
@@ -321,26 +321,34 @@ form.footer-store-locator-form{
 
 
 
-
-
-
 // ------------------------------------------------
-//     d8888   .d8888b.   .d8888b.                         8888888888  .d8888b.  8888888888
-//    d8P888  d88P  Y88b d88P  Y88b                              d88P d88P  Y88b       d88P
-//   d8P 888  Y88b. d88P 888    888                             d88P  888             d88P
-//  d8P  888   "Y88888"  888    888 88888b.  888  888          d88P   888d888b.      d88P  88888b.  888  888
-// d88   888  .d8P""Y8b. 888    888 888 "88b `Y8bd8P'       88888888  888P "Y88b  88888888 888 "88b `Y8bd8P'
-// 8888888888 888    888 888    888 888  888   X88K  888888  d88P     888    888   d88P    888  888   X88K
-//       888  Y88b  d88P Y88b  d88P 888 d88P .d8""8b.       d88P      Y88b  d88P  d88P     888 d88P .d8""8b.
-//       888   "Y8888P"   "Y8888P"  88888P"  888  888      d88P        "Y8888P"  d88P      88888P"  888  888
-//                                  888                                                    888
-//                                  888                                                    888
-//                                  888                                                    888
+//  888888888   .d8888b.  8888888888                       8888888888  .d8888b.  8888888888
+// 888        d88P  Y88b       d88P                              d88P d88P  Y88b       d88P
+// 888        888             d88P                              d88P  888             d88P
+// 8888888b.  888d888b.      d88P  88888b.  888  888           d88P   888d888b.      d88P  88888b.  888  888
+//      "Y88b 888P "Y88b  88888888 888 "88b `Y8bd8P'        88888888  888P "Y88b  88888888 888 "88b `Y8bd8P'
+//        888 888    888   d88P    888  888   X88K   888888  d88P     888    888   d88P    888  888   X88K
+// Y88b  d88P Y88b  d88P  d88P     888 d88P .d8""8b.        d88P      Y88b  d88P  d88P     888 d88P .d8""8b.
+//   Y8888P"   "Y8888P"  d88P      88888P"  888  888       d88P        "Y8888P"  d88P      88888P"  888  888
+//                                 888                                                     888 
+//                                 888                                                     888  
+//                                 888                                                     888 
 // ------------------------------------------------
 
-@media (min-width: px-em(480px)) and (max-width: px-em(767px)) {
+@media (min-width: px-em(567px)) and (max-width: px-em(767px)) {
+  .footer-ex {
+    position: relative;
+  }
 
+  .footer-contact.span6 > p {
+    position: absolute;
+    width: 100%;
+    left: 0;
+  }
 
+  .footer-social-links {
+    margin: 20px 0 0;
+  }
 } // (min-width: 480px) and (max-width: 767px)
 
 
